--- a/1_AbstractFactoryMethod/pom.xml
+++ b/1_AbstractFactoryMethod/pom.xml
@@ -3,4 +3,18 @@
   <groupId>com.firat</groupId>
   <artifactId>1_AbstractFactoryMethod</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <build>
+  	    <plugins>
+      		<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<version>3.10.1</version>
+        		<configuration>
+          			<source>1.8</source>
+          			<target>1.8</target>
+        		</configuration>
+      		</plugin>
+    	</plugins>
+  </build>
 </project>
